<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TableLayout
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/tableLayout">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose"
                android:id="@+id/textView1"
                android:singleLine="false"
                android:maxLines="8">

            </TextView>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/op1"
                android:id="@+id/button1"
                android:onClick="firstOption"
                android:singleLine="false"
                android:maxLines="4"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/op2"
                android:id="@+id/button2"
                android:onClick="secondOption"
                android:singleLine="false"
                android:maxLines="4"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/op3"
                android:id="@+id/button3"
                android:onClick="thirdOption"
                android:singleLine="false"
                android:maxLines="4"/>
        </TableRow>
        <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adv1"
            android:id="@+id/Adv1"
            android:onClick="startAdventure"
            android:singleLine="false"
            android:maxLines="4"/>
    </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adv2"
                android:id="@+id/Adv2"
                android:onClick="startAdventure"
                android:singleLine="false"
                android:maxLines="4"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adv3"
                android:id="@+id/Adv3"
                android:onClick="startAdventure"
                android:singleLine="false"
                android:maxLines="4"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adv4"
                android:id="@+id/Adv4"
                android:onClick="startAdventure"
                android:singleLine="false"
                android:maxLines="4"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
